add search and sorting according to entity fields